--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
 
 
 .col-md-6 {
-    margin-top: 20%;
+    margin-top: 15%;
     background-color: #eee;
     color: #D57E94;
     border-style: solid;
@@ -43,8 +43,7 @@ body {
 }
 
 .col-md-3 {
-    margin-top: 20%;
-    
+    margin-top: 15%;
 }
 
 footer {
@@ -59,4 +58,21 @@ footer {
 
 p {
     margin-top: 10px;
+}
+
+.contact {
+    margin-top: 10px;
+}
+
+.btn {
+    background-color: #D57E94;
+    color: #eee;
+    border-style: solid;
+    border-color: #eee;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.img1, .img2 {
+    width: 100%;
 }
