--- a/styles.css
+++ b/styles.css
@@ -26,10 +26,12 @@ body {
 }
 
 .bio {
-    margin-top: 10%;
-    margin-bottom: 10%;
-    width: 100%;
-    float: left;
+    text-align: center;
+    /*margin-top: 10%;
+    margin-bottom: 10%; */
+    margin: auto;
+    width: 50%;
+    /*float: left;*/
 }
 
 
@@ -58,6 +60,7 @@ footer {
 
 p {
     margin-top: 10px;
+    font-size: 36px;
 }
 
 .contact {
@@ -75,4 +78,14 @@ p {
 
 .img1, .img2 {
     width: 100%;
+}
+
+@media (min-width: 768px) {
+    p {
+        margin-top: 10px;
+        font-size: 24px;
+    }
+    .img1, .img2 {
+        width: 100%;
+    }
 }
